@@ -1,28 +1,26 @@
-// PaymentService.java
 package com.kosa.backend.payment.service;
 
 import com.kosa.backend.funding.project.entity.Funding;
 import com.kosa.backend.funding.project.entity.Reward;
 import com.kosa.backend.funding.project.repository.FundingRepository;
 import com.kosa.backend.funding.project.repository.RewardRepository;
+import com.kosa.backend.funding.support.entity.FundingSupport;
+import com.kosa.backend.funding.support.repository.FundingSupportRepository;
 import com.kosa.backend.payment.dto.PaymentDTO;
-import com.kosa.backend.payment.entity.Coupon;
-import com.kosa.backend.payment.entity.Payment;
-import com.kosa.backend.payment.entity.PaymentHistory;
-import com.kosa.backend.payment.entity.PaymentMethod;
+import com.kosa.backend.payment.entity.*;
 import com.kosa.backend.payment.entity.enums.PaymentStatus;
-import com.kosa.backend.payment.repository.CouponRepository;
-import com.kosa.backend.payment.repository.PaymentHistoryRepository;
-import com.kosa.backend.payment.repository.PaymentMethodRepository;
-import com.kosa.backend.payment.repository.PaymentRepository;
+import com.kosa.backend.payment.repository.*;
+import com.kosa.backend.user.entity.Address;
 import com.kosa.backend.user.entity.User;
+import com.kosa.backend.user.repository.AddressRepository;
 import com.kosa.backend.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,43 +31,44 @@ public class PaymentService {
     private final UserRepository userRepository;
     private final CouponRepository couponRepository;
     private final FundingRepository fundingRepository;
+    private final AddressRepository addressRepository;
     private final RewardRepository rewardRepository;
     private final PaymentHistoryRepository paymentHistoryRepository;
+    private final FundingSupportRepository fundingSupportRepository;
 
     @Transactional
     public PaymentDTO createPayment(PaymentDTO paymentDTO) {
-        // User 조회
+        // 사용자 조회
         User user = userRepository.findById(paymentDTO.getUserId())
-                .orElseThrow(() -> new RuntimeException("User not found for ID: " + paymentDTO.getUserId()));
+                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다: " + paymentDTO.getUserId()));
 
-        // Coupon 조회 (Optional)
-        Coupon coupon = null;
-        if (paymentDTO.getCouponId() != null) {
-            coupon = couponRepository.findById(paymentDTO.getCouponId())
-                    .orElseThrow(() -> new RuntimeException("Coupon not found for ID: " + paymentDTO.getCouponId()));
-        }
+        // 주소 조회
+        Address address = addressRepository.findById(paymentDTO.getAddressId())
+                .orElseThrow(() -> new RuntimeException("주소를 찾을 수 없습니다: " + paymentDTO.getAddressId()));
 
-        // Funding 조회
-        Funding funding = fundingRepository.findById(paymentDTO.getFundingId())
-                .orElseThrow(() -> new RuntimeException("Funding not found for ID: " + paymentDTO.getFundingId()));
+        // 쿠폰 조회 (Optional)
+        Coupon coupon = paymentDTO.getCouponId() != null
+                ? couponRepository.findById(paymentDTO.getCouponId()).orElse(null)
+                : null;
 
-        // Payment 엔티티 생성 및 저장
+        // Payment 생성
         Payment payment = new Payment();
         payment.setAmount(paymentDTO.getAmount());
         payment.setPaymentDate(LocalDateTime.now());
         payment.setStatus(PaymentStatus.pending);
-//        payment.setDeliveryAddress(paymentDTO.getDeliveryAddress());
         payment.setPhoneNum(paymentDTO.getPhoneNum());
         payment.setReceiverName(paymentDTO.getReceiverName());
         payment.setDeliveryRequest(paymentDTO.getDeliveryRequest());
         payment.setUser(user);
+        payment.setAddress(address);
         payment.setCoupon(coupon);
 
         Payment savedPayment = paymentRepository.save(payment);
 
-        // PaymentMethod 생성 및 저장
+        // 결제 방식 저장
         PaymentMethod paymentMethod = new PaymentMethod();
         paymentMethod.setMethodType(paymentDTO.getMethodType());
+        paymentMethod.setPayment(savedPayment);
 
         if ("CARD".equals(paymentDTO.getMethodType())) {
             paymentMethod.setCardNumber(paymentDTO.getCardNumber());
@@ -78,93 +77,79 @@ public class PaymentService {
             paymentMethod.setThirdPartyPw(paymentDTO.getThirdPartyPw());
         }
 
-        paymentMethod.setPayment(savedPayment);
         paymentMethodRepository.save(paymentMethod);
 
-        // PaymentHistory 생성 및 저장
+        // PaymentHistory 저장
+        Funding funding = fundingRepository.findById(paymentDTO.getFundingId())
+                .orElseThrow(() -> new RuntimeException("펀딩을 찾을 수 없습니다: " + paymentDTO.getFundingId()));
+
         PaymentHistory paymentHistory = new PaymentHistory();
         paymentHistory.setPayment(savedPayment);
         paymentHistory.setFunding(funding);
         paymentHistoryRepository.save(paymentHistory);
 
-        // 반환할 rewardIds 데이터 가져오기
-        List<Integer> rewardIds = paymentDTO.getRewardIds();
+        // 새로운 FundingSupport 저장
+        paymentDTO.getRewards().forEach((rewardId, rewardInfo) -> {
+            Reward reward = rewardRepository.findById(rewardId)
+                    .orElseThrow(() -> new RuntimeException("리워드를 찾을 수 없습니다: " + rewardId));
 
-        // PaymentDTO 반환
-        PaymentDTO resultDTO = new PaymentDTO();
-        resultDTO.setUserId(user.getId());
-        resultDTO.setAmount(savedPayment.getAmount());
-//        resultDTO.setDeliveryAddress(savedPayment.getDeliveryAddress());
-        resultDTO.setPhoneNum(savedPayment.getPhoneNum());
-        resultDTO.setReceiverName(savedPayment.getReceiverName());
-        resultDTO.setDeliveryRequest(savedPayment.getDeliveryRequest());  // 매핑 추가
-        resultDTO.setCouponId(paymentDTO.getCouponId());
-        resultDTO.setMethodType(paymentMethod.getMethodType());
-        resultDTO.setCardNumber(paymentMethod.getCardNumber());
-        resultDTO.setThirdPartyId(paymentMethod.getThirdPartyId());
-        resultDTO.setThirdPartyPw(paymentMethod.getThirdPartyPw());
-        resultDTO.setPaymentDate(savedPayment.getPaymentDate());
-        resultDTO.setStatus(savedPayment.getStatus().toString());
-        resultDTO.setFundingId(funding.getId());
-        resultDTO.setRewardIds(rewardIds);  // 매핑 추가
+            FundingSupport fundingSupport = FundingSupport.builder()
+                    .reward(reward)
+                    .funding(funding)
+                    .user(user)
+                    .payment(savedPayment)  // Payment 설정
+                    .rewardCount(rewardInfo.getQuantity())
+                    .supportDate(LocalDateTime.now())
+                    .build();
 
-        return resultDTO;
+            fundingSupportRepository.save(fundingSupport);
+        });
+
+        return mapToDTO(savedPayment, funding, paymentDTO.getRewards());
     }
 
-    // 사용자 ID에 따른 결제 이력 조회
     @Transactional
     public List<PaymentDTO> getPaymentsByUserId(int userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with ID: " + userId));
-
-        List<Payment> payments = paymentRepository.findByUser(user);
+        List<Payment> payments = paymentRepository.findByUser_Id(userId);
 
         return payments.stream().map(payment -> {
-            PaymentMethod paymentMethod = paymentMethodRepository.findByPayment(payment)
-                    .orElseThrow(() -> new RuntimeException("PaymentMethod not found for Payment ID: " + payment.getId()));
-
             PaymentHistory paymentHistory = paymentHistoryRepository.findByPayment(payment)
-                    .orElseThrow(() -> new RuntimeException("PaymentHistory not found for Payment ID: " + payment.getId()));
+                    .orElseThrow(() -> new RuntimeException("결제 내역을 찾을 수 없습니다: " + payment.getId()));
 
             Funding funding = paymentHistory.getFunding();
 
-            // PaymentDTO 매핑
-            PaymentDTO dto = new PaymentDTO();
-            dto.setUserId(payment.getUser().getId());
-            dto.setAmount(payment.getAmount());
-//            dto.setDeliveryAddress(payment.getDeliveryAddress());
-            dto.setPhoneNum(payment.getPhoneNum());
-            dto.setReceiverName(payment.getReceiverName());
-            dto.setDeliveryRequest(payment.getDeliveryRequest());
-            dto.setPaymentDate(payment.getPaymentDate());
-            dto.setStatus(payment.getStatus().toString());
-            dto.setMethodType(paymentMethod.getMethodType());
-            dto.setCardNumber(paymentMethod.getCardNumber());
-            dto.setThirdPartyId(paymentMethod.getThirdPartyId());
-            dto.setThirdPartyPw(paymentMethod.getThirdPartyPw());
-            dto.setFundingId(funding.getId());
+            List<FundingSupport> fundingSupports = fundingSupportRepository.findByFundingIdAndUserIdAndPaymentId(
+                    funding.getId(), payment.getUser().getId(), payment.getId()
+            );
 
-            // Reward ID 리스트 매핑
-            List<Integer> rewardIds = funding.getRewards().stream()
-                    .map(Reward::getId)  // reward.getId()를 호출할 수 있는지 확인
-                    .toList();
-            dto.setRewardIds(rewardIds);
+            Map<Integer, PaymentDTO.RewardInfo> rewardsMap = fundingSupports.stream()
+                    .collect(Collectors.toMap(
+                            fs -> fs.getReward().getId(),
+                            fs -> {
+                                PaymentDTO.RewardInfo rewardInfo = new PaymentDTO.RewardInfo();
+                                rewardInfo.setRewardId(fs.getReward().getId());
+                                rewardInfo.setRewardName(fs.getReward().getRewardName());
+                                rewardInfo.setQuantity(fs.getRewardCount());
+                                return rewardInfo;
+                            },
+                            (existing, replacement) -> existing // 중복 시 기존 값 유지
+                    ));
 
-            return dto;
-        }).toList();
+            return mapToDTO(payment, funding, rewardsMap);
+        }).collect(Collectors.toList());
     }
 
-
-
-    // 결제 ID에 따른 결제 이력 삭제
     @Transactional
     public void deletePaymentByUser(int paymentId, int userId) {
         Payment payment = paymentRepository.findById(paymentId)
-                .orElseThrow(() -> new RuntimeException("Payment not found with ID: " + paymentId));
+                .orElseThrow(() -> new RuntimeException("해당 결제를 찾을 수 없습니다: " + paymentId));
 
         if (payment.getUser().getId() != userId) {
-            throw new RuntimeException("User does not have permission to delete this payment.");
+            throw new RuntimeException("결제를 삭제할 권한이 없습니다.");
         }
+
+        // funding_support에서 참조하는 레코드 삭제
+        fundingSupportRepository.deleteByPaymentId(paymentId);
 
         // PaymentHistory 삭제
         paymentHistoryRepository.deleteByPayment(payment);
@@ -176,4 +161,35 @@ public class PaymentService {
         paymentRepository.delete(payment);
     }
 
+    private PaymentDTO mapToDTO(Payment payment, Funding funding, Map<Integer, PaymentDTO.RewardInfo> rewardsMap) {
+        PaymentDTO dto = new PaymentDTO();
+        dto.setId(payment.getId());
+        dto.setUserId(payment.getUser().getId());
+        dto.setAmount(payment.getAmount());
+        dto.setPaymentDate(payment.getPaymentDate());
+        dto.setStatus(payment.getStatus().toString());
+        dto.setPhoneNum(payment.getPhoneNum());
+        dto.setReceiverName(payment.getReceiverName());
+        dto.setDeliveryRequest(payment.getDeliveryRequest());
+        dto.setCouponId(payment.getCoupon() != null ? payment.getCoupon().getId() : null);
+        dto.setAddressId(payment.getAddress().getId());
+        dto.setFundingId(funding.getId());
+
+        // Reward 정보 추가 (Map 사용)
+        dto.setRewards(rewardsMap);
+
+        // PaymentMethod 정보 추가
+        PaymentMethod paymentMethod = paymentMethodRepository.findByPayment(payment)
+                .orElseThrow(() -> new RuntimeException("결제 수단을 찾을 수 없습니다: " + payment.getId()));
+
+        dto.setMethodType(paymentMethod.getMethodType());
+        if ("CARD".equals(paymentMethod.getMethodType())) {
+            dto.setCardNumber(paymentMethod.getCardNumber());
+        } else {
+            dto.setThirdPartyId(paymentMethod.getThirdPartyId());
+            dto.setThirdPartyPw(paymentMethod.getThirdPartyPw());
+        }
+
+        return dto;
+    }
 }
